# DeepLearning2021Hungyi_Lee

./: .gitignore  README.md
Homework/HW1/project1/: dataProcess.py  graphMaking.py  main.py  model.py  pyproject.toml
Homework/HW1/project1-new/: README.md  pyproject.toml
Homework/HW2/project2/: README.md  dataProcess.py  graphMaking.py  main.py  model.py  project_test.py  pyproject.toml  修改经验01.md  修改经验02.md
Homework/HW3/experiments/: 修改经验01.md  修改经验02.md
Homework/HW3/project3/: main.py  pyproject.toml
Homework/HW3/project3/src/: dataProcess.py  graphMaking.py  main.py  model.py  resnet.py  showmyimpact.ipynb
Homework/HW3/project3/test/: test_pseudo_labels.py  test_resource.py  test_resource_loading.py  test_transformRotation.py  test_version.py
Homework/HW3/submission/: submission.csv  submissionBest.csv
Homework/HW4/experiments/: 实验日志.md
Homework/HW4/project4/: pyproject.toml
Homework/HW4/project4/saved_models/: best_model.pth
Homework/HW4/project4/src/: data_process.py  graph_making.py  main.py  model.py  model_train.py
Homework/HW4/project4/test/: test_version.py
Homework/HW4/submission/: submission.csv
TheModel/: dataProcess.py  graphMaking.py  main.py  model.py
lectures/: LeeDL_Tutorial_v.1.2.3.pdf:Zone.Identifier
lectures/CNN&Self_Attention/: attention.md  cnn.md  卷积神经网络随课笔记.txt  自注意力随课笔记.txt
lectures/DL_Classification/: classficaiton随课笔记.txt  classification.md  optimizer.md  optimizer随课笔记.txt  overfit.md  small_gradient.md  small_gradient随课笔记.txt
lectures/Introduction/: intro.md
杂记/: script.md
询问ai时的一点收获/: standard.txt
(+6 files in other folders)
