[project]
name = "project4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib==3.10.3",
    "numpy==2.2.6",
    "pandas==2.2.3",
    "pathlib>=1.0.1",
    "seaborn>=0.13.2",
    "termcolor>=3.1.0",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

